controlBar overflow fix

--- a/src/app.css
+++ b/src/app.css
@@ -5,5 +5,6 @@
 }
 
 .controlDiv {
-  height: 100vh;
+  max-height: 100vh;
+  overflow: scroll;
 }
